--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@tailwindcss/vite": "^4.0.14",
     "chart.js": "^4.4.8",
+    "currency-flags": "^4.0.7",
+    "tailwindcss": "^4.0.14",
     "vue": "^3.5.13",
     "vue-chartjs": "^5.3.2"
   },
